--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <h3 class="nav-title">Ma<span class="orange">r</span>y</h3>
         <ul>
@@ -26,7 +26,20 @@
           </li>
         </ul>
       </nav>
+      <div class="banner">
+        <div class="banner-content">
+       <h3 class="banner-greeting">Hi, I am</h3>
+      <h1 class="banner-title"><Mary Hardy></h1>
+        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        <button class="button-primary">Download CV</button>
+        <button class="button-primary">Contact</button>
+    </div>
+    
+      <img class="profile-pic" src="images/hardy.png" alt="">
+      
+    </div>
     </header>
+  
     <main></main>
     <footer></footer>
   </body>
