--- a/index.html
+++ b/index.html
@@ -28,19 +28,173 @@
       </nav>
       <div class="banner">
         <div class="banner-content">
-       <h3 class="banner-greeting">Hi, I am</h3>
-      <h1 class="banner-title"><Mary Hardy></h1>
-        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-        <button class="button-primary">Download CV</button>
-        <button class="button-primary">Contact</button>
-    </div>
-    
-      <img class="profile-pic" src="images/hardy.png" alt="">
-      
-    </div>
+          <h3 class="banner-greeting">Hi, I am</h3>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="banner-paragraph">
+            Shot what able cold new see hold.Friendly as an betrayed formerly
+            he. Morning because as to society behaved moments.
+          </p>
+          <button class="button-primary">Download CV</button>
+          <button class="button-primary">Contact</button>
+        </div>
+
+        <img class="profile-pic" src="images/hardy.png" alt="" />
+      </div>
     </header>
-  
-    <main></main>
+
+    <main>
+      <!-- about info start -->
+      <section class="about">
+        <h3 class="about-title">About Me</h3>
+        <p class="about-paragraph">
+          I, m a designer & developer with a passion for web design. I enjoy
+          developing simple, clean and slick websites that provide real value to
+          the end user. Thousands of clients have procured exceptional resulfs
+          while working with me. Delivering work within time and budget which
+          meets clients requirements in our mata.
+        </p>
+
+        <div class="about-info-container">
+          <div class="about-info">
+            <h4 class="info-title">Name:</h4>
+            <p class="info-description">Mary Hardy</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Email:</h4>
+            <p class="info-description">info@html.com</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">Date of Birth:</h4>
+            <p class="info-description">11 November 1987</p>
+          </div>
+          <div class="about-info">
+            <h4 class="info-title">From:</h4>
+            <p class="info-description">Los angels, USA</p>
+          </div>
+        </div>
+      </section>
+      <!-- about info end -->
+      <!-- what i do start -->
+      <section class="what-i-do">
+        <h3 class="what-i-do-title">What I Do</h3>
+        <p id="what-i-do-description" class="what-i-do-description">
+          I have more than 10 years experience building software for clients all
+          over the world. Below is a quick overview of my main technical skill
+          sets and technologies i use. Want to find out more about my
+          experience? Check out my online resume and project portfolio.
+        </p>
+
+        <div class="skills-container">
+          <div class="skill">
+            <img src="images/icons/js.png" alt="" />
+            <h3 class="skill-title">Vanilla JavaScript</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/react.png" alt="" />
+            <h3 class="skill-title">React</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/nodejs.png" alt="" />
+            <h3 class="skill-title">Node.js</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+          <div class="skill">
+            <img src="images/icons/mongo.png" alt="" />
+            <h3 class="skill-title">MongoDB</h3>
+            <p class="skill-description">
+              List skill/technologies here. You can change the icon above to any
+              of the 1500+ FontAwesome 5 free icons available. Aenean commodo
+              ligula eget dolor.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- what i do end -->
+      <!-- resume section -->
+      <section>
+        <h3>A summary of My Resume</h3>
+        <div class="resume-container">
+          <div class="resume-column">
+            <h3 class="resume-column-title">My Education</h3>
+            <div class="resume-items">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-info">Harvard University / 2015 - 2017</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-items">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-info">Harvard University / 2015 - 2017</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="resume-items">
+              <h2 class="resume-item-title">Master in Computer Engineering</h2>
+              <h3 class="resume-item-info">Harvard University / 2015 - 2017</h3>
+              <p class="resume-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+          <div class="experience-column">
+            <h3 class="experience-column-title">My Experience</h3>
+            <div class="experience-items">
+              <h2 class="experinece-item-title">Sr. Font End Developer</h2>
+              <h3 class="experice-item-info">Apple Inc / 2020 - Current</h3>
+              <p class="experience-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="experience-items">
+              <h2 class="experinece-item-title">Jr. Font End Developer</h2>
+              <h3 class="experice-item-info">Dribbble Inc / 2018 - 2022</h3>
+              <p class="experience-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+              <hr />
+            </div>
+            <div class="experience-items">
+              <h2 class="experinece-item-title">HTML Developer</h2>
+              <h3 class="experice-item-info">Adobe Inc / 2017 - 2018</h3>
+              <p class="experience-item-description">
+                List skill/technologies here. You can change the icon above to
+                any of the 1500+ FontAwesome 5 free icons available. Aenean
+                commodo ligula eget dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
