--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <li><a target="_blank" href="">Portfolio</a></li>
           <li><a target="_blank" href="">Blog</a></li>
           <li>
-            <button class="button-primary">
+            <button class="button-primary hire-me">
               <a target="_blank" href="">Hire Me</a>
             </button>
           </li>
@@ -34,8 +34,8 @@
             Shot what able cold new see hold.Friendly as an betrayed formerly
             he. Morning because as to society behaved moments.
           </p>
-          <button class="button-primary">Download CV</button>
-          <button class="button-primary">Contact</button>
+          <button class="button-primary Download-Button">Download CV</button>
+          <button class="button-primary contact-button">Contact</button>
         </div>
 
         <img class="profile-pic" src="images/hardy.png" alt="" />
@@ -126,7 +126,7 @@
       <!-- what i do end -->
       <!-- resume section -->
       <section>
-        <h3>A summary of My Resume</h3>
+        <h3 class="resume-section-title">A Summary of My Resume</h3>
         <div class="resume-container">
           <div class="resume-column">
             <h3 class="resume-column-title">My Education</h3>
@@ -163,8 +163,8 @@
           <div class="experience-column">
             <h3 class="experience-column-title">My Experience</h3>
             <div class="experience-items">
-              <h2 class="experinece-item-title">Sr. Font End Developer</h2>
-              <h3 class="experice-item-info">Apple Inc / 2020 - Current</h3>
+              <h2 class="experience-item-title">Sr. Font End Developer</h2>
+              <h3 class="experience-item-info">Apple Inc / 2020 - Current</h3>
               <p class="experience-item-description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -173,8 +173,8 @@
               <hr />
             </div>
             <div class="experience-items">
-              <h2 class="experinece-item-title">Jr. Font End Developer</h2>
-              <h3 class="experice-item-info">Dribbble Inc / 2018 - 2022</h3>
+              <h2 class="experience-item-title">Jr. Font End Developer</h2>
+              <h3 class="experience-item-info">Dribbble Inc / 2018 - 2022</h3>
               <p class="experience-item-description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -183,8 +183,8 @@
               <hr />
             </div>
             <div class="experience-items">
-              <h2 class="experinece-item-title">HTML Developer</h2>
-              <h3 class="experice-item-info">Adobe Inc / 2017 - 2018</h3>
+              <h2 class="experience-item-title">HTML Developer</h2>
+              <h3 class="experience-item-info">Adobe Inc / 2017 - 2018</h3>
               <p class="experience-item-description">
                 List skill/technologies here. You can change the icon above to
                 any of the 1500+ FontAwesome 5 free icons available. Aenean
@@ -193,6 +193,11 @@
             </div>
           </div>
         </div>
+       <div class="cv-download">
+         <button class="button-primary Download-Button">
+          <a target="_blank" href="">Download Cv</a>
+       </div>
+        </button>
       </section>
     </main>
     <footer></footer>
