--- a/index.html
+++ b/index.html
@@ -193,13 +193,39 @@
             </div>
           </div>
         </div>
-       <div class="cv-download">
-         <button class="button-primary Download-Button">
-          <a target="_blank" href="">Download Cv</a>
-       </div>
-        </button>
+        <div class="cv-download">
+          <button class="button-primary Download-Button">
+            <a target="_blank" href="">Download Cv</a>
+          </button>
+        </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <section class="footer">
+        <div class="footer-social">
+          <div>
+          <h2 class="footer-title">Lets Connect</h2>
+          <p class="footer-details">
+            Please fill out the form on this section to contact with me or call
+            between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+          </p>
+          </div>
+          <div>
+            <img src="images/icons/facebook.png" alt="" class="footer-img" />
+          <img
+            src="images/icons/twitter.png"
+            alt=""
+            class="footer-img"
+          /><img src="images/icons/insta.png" alt="" class="footer-img" />
+          </div>
+        </div>
+        <div class="footer-form">
+          <form>
+            <h2 class="footer-title">Message Me</h2>
+            <input type="Name" >
+          </form>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
