--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </section>
       <!-- what i do end -->
       <!-- resume section -->
-      <section>
+      <section >
         <h3 class="resume-section-title">A Summary of My Resume</h3>
         <div class="resume-container">
           <div class="resume-column">
@@ -204,7 +204,7 @@
     <footer>
       <section class="footer">
         <div class="footer-social">
-          <div class="half-width">
+          <div class="footer-column">
           <h2 class="footer-title">Lets Connect</h2>
           <p class="footer-details">
             Please fill out the form on this section to contact with me or call
@@ -221,10 +221,10 @@
           </div>
         </div>
         <div class="footer-form">
-          <form class="half-width">
+          <form class="footer-column">
             <h2 class="footer-title">Message Me</h2>
             <input class="name" type="Name" placeholder="Your Name">
-            <input class="email" type="Name" placeholder="Your Email">
+            <input class="email" type="Email" placeholder="Your Email">
             <textarea name="Message" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
             <input class="button-primary Submit" type="Submit">
 
